added header and banner section and responsive

--- a/index.html
+++ b/index.html
@@ -6,9 +6,64 @@
     <title>Assignment - 02</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
-  <body>
-    <header></header>
-    <main></main>
+  <body style="background-color: rgb(12, 12, 12)" class="google-fonts">
+    <header class="header">
+      <div class="container">
+        <nav class="navbar display-flex">
+          <a href="#">Fitness</a>
+
+          <ul class="nav-links display-flex">
+            <li class="nav-item">
+              <a href="#" class="nav-link nav-active-bg">Home</a>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link">Service</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- banner start here -->
+      <div class="banner">
+        <div class="container">
+          <div class="banner-wrapper display-flex">
+            <div class="banner-left-content">
+              <h1>
+                Get body in <span class="montez-regular">shape</span> & stay
+                healthy
+              </h1>
+              <p>
+                A huge selection of health and fitness content, healthy recipes
+                and transformation stories to help you get fit and stay fit!
+              </p>
+              <div class="banner-btn display-flex">
+                <a href="" class="common-btn"
+                  >Join <span class="mobile-hide">Club</span> Now</a
+                >
+                <a href="#">Download App</a>
+              </div>
+            </div>
+            <div class="banner-right-content">
+              <div class="banner-img">
+                <img src="./images/banner.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="container">
+      <!-- start here -->
+      <section></section>
+      <!-- start here -->
+
+      <!-- start here -->
+
+      <!-- start here -->
+
+      <!-- start here -->
+    </main>
     <footer></footer>
   </body>
 </html>
