added habits section and mobile devices responsive

--- a/index.html
+++ b/index.html
@@ -54,8 +54,54 @@
     </header>
 
     <main class="container">
-      <!-- start here -->
-      <section></section>
+      <!-- habits start here -->
+      <section class="habits-section">
+        <div class="habits-title">
+          <h3 class="section-title">Change Your Habits</h3>
+          <p class="section-para">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+        <div class="habits-type-wrapper display-flex">
+          <div class="habits-type-box">
+            <div class="habits-img">
+              <img src="./images/habits1.png" alt="" />
+            </div>
+            <div class="habits-box-type-content">
+              <h5>Movement</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+          </div>
+          <div class="habits-type-box">
+            <div class="habits-img">
+              <img src="./images/habits2.png" alt="" />
+            </div>
+            <div class="habits-box-type-content">
+              <h5>Time</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+          </div>
+          <div class="habits-type-box">
+            <div class="habits-img">
+              <img src="./images/habits3.png" alt="" />
+            </div>
+            <div class="habits-box-type-content">
+              <h5>Practice</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+          </div>
+          <div class="habits-type-box">
+            <div class="habits-img">
+              <img src="./images/habits4.png" alt="" />
+            </div>
+            <div class="habits-box-type-content">
+              <h5>Weight Loss</h5>
+              <p>We believe fitness should be accessible to everyone</p>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- start here -->
 
       <!-- start here -->
