added extra run section

--- a/index.html
+++ b/index.html
@@ -102,8 +102,23 @@
           </div>
         </div>
       </section>
-      <!-- start here -->
 
+      <!-- extra start here -->
+      <section class="extra-run display-flex">
+        <div class="extra-run-left-content">
+          <h3 class="section-title">Run an Extra Mile Easily</h3>
+          <p class="section-para">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym. With hundreds of
+            professional workouts.
+          </p>
+          <a href="#" class="common-btn">join Now</a>
+        </div>
+
+        <div class="extra-run-img">
+          <img src="./images/run.jpg" alt="" />
+        </div>
+      </section>
       <!-- start here -->
 
       <!-- start here -->
