added team section

--- a/index.html
+++ b/index.html
@@ -119,8 +119,62 @@
           <img src="./images/run.jpg" alt="" />
         </div>
       </section>
-      <!-- start here -->
 
+      <!-- start here -->
+      <section class="team-section">
+        <div class="team-title">
+          <h3 class="section-title">Meet Our Team</h3>
+          <p class="section-para">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+
+        <div class="team-wrapper display-flex">
+          <div class="team-single-box">
+            <img src="./images/trainer1.png" alt="" />
+            <div class="team-img-content">
+              <h6>Jerome Bell</h6>
+              <span>Trainer</span>
+            </div>
+          </div>
+          <div class="team-single-box">
+            <img src="./images/trainer2.png" alt="" />
+            <div class="team-img-content">
+              <h6>Cameron Williamson</h6>
+              <span>Trainer</span>
+            </div>
+          </div>
+          <div class="team-single-box">
+            <img src="./images/trainer3.png" alt="" />
+            <div class="team-img-content">
+              <h6>Darrell Steward</h6>
+              <span>Trainer</span>
+            </div>
+          </div>
+          <div class="team-single-box mobile-hide">
+            <img src="./images/trainer4.png" alt="" />
+            <div class="team-img-content">
+              <h6>Dianne Russell</h6>
+              <span>Trainer</span>
+            </div>
+          </div>
+          <div class="team-single-box mobile-hide">
+            <img src="./images/trainer5.png" alt="" />
+            <div class="team-img-content">
+              <h6>Cody Fisher</h6>
+              <span>Trainer</span>
+            </div>
+          </div>
+          <div class="team-single-box">
+            <img src="./images/trainer6.png" alt="" />
+            <div class="team-img-content">
+              <h6>Theresa Webb</h6>
+              <span>Trainer</span>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- start here -->
 
       <!-- start here -->
