added footer section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,41 @@
 
       <!-- start here -->
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-wrapper display-flex">
+          <div class="footer-links-details">
+            <a href="">Fitness</a>
+            <p class="section-para">
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym. With hundreds of
+              professional workouts.
+            </p>
+          </div>
+          <div class="footer-links-details">
+            <h4>Get Started</h4>
+            <ul class="footer-list-item">
+              <li><a href="">Services</a></li>
+              <li><a href="">Contact Us</a></li>
+              <li><a href="">Affiliate Program</a></li>
+              <li><a href="">About Us</a></li>
+            </ul>
+          </div>
+          <div class="footer-links-details">
+            <h4>Get Started</h4>
+            <ul class="footer-list-item">
+              <li><a href="">Fitness</a></li>
+              <li><a href="">Platform</a></li>
+              <li><a href="">Workout Library</a></li>
+              <li><a href="">App Design</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="all-right-reserved">
+          <p class="section-para">All right reserved @Fitness 2024</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
