--- a/index.html
+++ b/index.html
@@ -53,124 +53,132 @@
       </div>
     </header>
 
-    <main class="container">
+    <main>
       <!-- habits start here -->
       <section class="habits-section">
-        <div class="habits-title">
-          <h3 class="section-title">Change Your Habits</h3>
-          <p class="section-para">
-            We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or access to a gym.
-          </p>
-        </div>
-        <div class="habits-type-wrapper display-flex">
-          <div class="habits-type-box">
-            <div class="habits-img">
-              <img src="./images/habits1.png" alt="" />
-            </div>
-            <div class="habits-box-type-content">
-              <h5>Movement</h5>
-              <p>We believe fitness should be accessible to everyone</p>
-            </div>
+        <div class="container">
+          <div class="habits-title">
+            <h3 class="section-title">Change Your Habits</h3>
+            <p class="section-para">
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym.
+            </p>
           </div>
-          <div class="habits-type-box">
-            <div class="habits-img">
-              <img src="./images/habits2.png" alt="" />
+          <div class="habits-type-wrapper display-flex">
+            <div class="habits-type-box">
+              <div class="habits-img">
+                <img src="./images/habits1.png" alt="" />
+              </div>
+              <div class="habits-box-type-content">
+                <h5>Movement</h5>
+                <p>We believe fitness should be accessible to everyone</p>
+              </div>
             </div>
-            <div class="habits-box-type-content">
-              <h5>Time</h5>
-              <p>We believe fitness should be accessible to everyone</p>
+            <div class="habits-type-box">
+              <div class="habits-img">
+                <img src="./images/habits2.png" alt="" />
+              </div>
+              <div class="habits-box-type-content">
+                <h5>Time</h5>
+                <p>We believe fitness should be accessible to everyone</p>
+              </div>
             </div>
-          </div>
-          <div class="habits-type-box">
-            <div class="habits-img">
-              <img src="./images/habits3.png" alt="" />
+            <div class="habits-type-box">
+              <div class="habits-img">
+                <img src="./images/habits3.png" alt="" />
+              </div>
+              <div class="habits-box-type-content">
+                <h5>Practice</h5>
+                <p>We believe fitness should be accessible to everyone</p>
+              </div>
             </div>
-            <div class="habits-box-type-content">
-              <h5>Practice</h5>
-              <p>We believe fitness should be accessible to everyone</p>
-            </div>
-          </div>
-          <div class="habits-type-box">
-            <div class="habits-img">
-              <img src="./images/habits4.png" alt="" />
-            </div>
-            <div class="habits-box-type-content">
-              <h5>Weight Loss</h5>
-              <p>We believe fitness should be accessible to everyone</p>
+            <div class="habits-type-box">
+              <div class="habits-img">
+                <img src="./images/habits4.png" alt="" />
+              </div>
+              <div class="habits-box-type-content">
+                <h5>Weight Loss</h5>
+                <p>We believe fitness should be accessible to everyone</p>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
       <!-- extra start here -->
-      <section class="extra-run display-flex">
-        <div class="extra-run-left-content">
-          <h3 class="section-title">Run an Extra Mile Easily</h3>
-          <p class="section-para">
-            We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or access to a gym. With hundreds of
-            professional workouts.
-          </p>
-          <a href="#" class="common-btn">join Now</a>
-        </div>
+      <section class="extra-run">
+        <div class="container">
+          <div class="extra-run-wrapper display-flex">
+            <div class="extra-run-left-content">
+              <h3 class="section-title">Run an Extra Mile Easily</h3>
+              <p class="section-para">
+                We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym. With hundreds of
+                professional workouts.
+              </p>
+              <a href="#" class="common-btn">join Now</a>
+            </div>
 
-        <div class="extra-run-img">
-          <img src="./images/run.jpg" alt="" />
+            <div class="extra-run-img">
+              <img src="./images/run.jpg" alt="" />
+            </div>
+          </div>
         </div>
       </section>
 
       <!-- start here -->
       <section class="team-section">
-        <div class="team-title">
-          <h3 class="section-title">Meet Our Team</h3>
-          <p class="section-para">
-            We believe fitness should be accessible to everyone, everywhere,
-            regardless of income or access to a gym.
-          </p>
-        </div>
+        <div class="container">
+          <div class="team-title">
+            <h3 class="section-title">Meet Our Team</h3>
+            <p class="section-para">
+              We believe fitness should be accessible to everyone, everywhere,
+              regardless of income or access to a gym.
+            </p>
+          </div>
 
-        <div class="team-wrapper display-flex">
-          <div class="team-single-box">
-            <img src="./images/trainer1.png" alt="" />
-            <div class="team-img-content">
-              <h6>Jerome Bell</h6>
-              <span>Trainer</span>
+          <div class="team-wrapper display-flex">
+            <div class="team-single-box">
+              <img src="./images/trainer1.png" alt="" />
+              <div class="team-img-content">
+                <h6>Jerome Bell</h6>
+                <span>Trainer</span>
+              </div>
             </div>
-          </div>
-          <div class="team-single-box">
-            <img src="./images/trainer2.png" alt="" />
-            <div class="team-img-content">
-              <h6>Cameron Williamson</h6>
-              <span>Trainer</span>
+            <div class="team-single-box">
+              <img src="./images/trainer2.png" alt="" />
+              <div class="team-img-content">
+                <h6>Cameron Williamson</h6>
+                <span>Trainer</span>
+              </div>
             </div>
-          </div>
-          <div class="team-single-box">
-            <img src="./images/trainer3.png" alt="" />
-            <div class="team-img-content">
-              <h6>Darrell Steward</h6>
-              <span>Trainer</span>
+            <div class="team-single-box">
+              <img src="./images/trainer3.png" alt="" />
+              <div class="team-img-content">
+                <h6>Darrell Steward</h6>
+                <span>Trainer</span>
+              </div>
             </div>
-          </div>
-          <div class="team-single-box mobile-hide">
-            <img src="./images/trainer4.png" alt="" />
-            <div class="team-img-content">
-              <h6>Dianne Russell</h6>
-              <span>Trainer</span>
+            <div class="team-single-box mobile-hide">
+              <img src="./images/trainer4.png" alt="" />
+              <div class="team-img-content">
+                <h6>Dianne Russell</h6>
+                <span>Trainer</span>
+              </div>
             </div>
-          </div>
-          <div class="team-single-box mobile-hide">
-            <img src="./images/trainer5.png" alt="" />
-            <div class="team-img-content">
-              <h6>Cody Fisher</h6>
-              <span>Trainer</span>
+            <div class="team-single-box mobile-hide">
+              <img src="./images/trainer5.png" alt="" />
+              <div class="team-img-content">
+                <h6>Cody Fisher</h6>
+                <span>Trainer</span>
+              </div>
             </div>
-          </div>
-          <div class="team-single-box">
-            <img src="./images/trainer6.png" alt="" />
-            <div class="team-img-content">
-              <h6>Theresa Webb</h6>
-              <span>Trainer</span>
+            <div class="team-single-box">
+              <img src="./images/trainer6.png" alt="" />
+              <div class="team-img-content">
+                <h6>Theresa Webb</h6>
+                <span>Trainer</span>
+              </div>
             </div>
           </div>
         </div>
