--- a/index.html
+++ b/index.html
@@ -126,7 +126,76 @@
         </div>
       </section>
 
-      <!-- start here -->
+      <!-- BMI calculator -->
+      <div class="container">
+        <div class="bmi-header-title">
+          <h3 class="section-title">BMI Calculator</h3>
+          <p class="section-para">
+            We believe fitness should be accessible to everyone, everywhere,
+            regardless of income or access to a gym.
+          </p>
+        </div>
+      </div>
+
+      <section class="bmi-calculator">
+        <div class="container">
+          <div class="bmi-calculator-wrapper display-flex">
+            <div class="bmi-left-calc">
+              <h4 class="bmi-calc-title">BMI Calculator Chart</h4>
+              <table class="bmi-table">
+                <thead>
+                  <tr>
+                    <th>BMI</th>
+                    <th>Weight Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                  </tr>
+                  <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Healthy</td>
+                  </tr>
+                  <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                  </tr>
+                  <tr>
+                    <td>30.0 - and Above</td>
+                    <td>Obese</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="bmi-right-cal">
+              <h4 class="bmi-calc-title">Calculate your BMI</h4>
+              <p class="section-para">
+                We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.
+              </p>
+              <div class="bmi-input">
+                <input type="text" placeholder="Height/cm" />
+                <input type="text" placeholder="Weight/Kg" />
+                <input type="number" placeholder="Age" />
+                <select name="" id="">
+                  <option value="">Sex</option>
+                  <option value="">Male</option>
+                  <option value="">Female</option>
+                  <option value="">Others</option>
+                </select>
+                <select class="grid-span" name="" id="">
+                  <option value="">Select an activity factor</option>
+                </select>
+              </div>
+              <a href="" class="common-btn">Calculate</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- team here -->
       <section class="team-section">
         <div class="container">
           <div class="team-title">
@@ -183,9 +252,6 @@
           </div>
         </div>
       </section>
-      <!-- start here -->
-
-      <!-- start here -->
     </main>
     <footer class="footer">
       <div class="container">
