changes some styles and section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment - 02</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body style="background-color: rgb(12, 12, 12)" class="google-fonts">
@@ -20,6 +27,8 @@
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
           </ul>
+
+          <div class="nav-three-dot"><i class="fa-solid fa-bars"></i></div>
         </nav>
       </div>
 
@@ -46,13 +55,23 @@
             <div class="banner-right-content">
               <div class="banner-img">
                 <img src="./images/banner.png" alt="" />
+                <div class="banner-video-box-one">
+                  <div class="red-dot"></div>
+                  <div class="banner-video-box-content">
+                    <h2>350+</h2>
+                    <span>Video tutorial</span>
+                  </div>
+                </div>
+                <div class="video-box-two">
+                  <h2>500+</h2>
+                  <span>Free Workout Videos</span>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </header>
-
     <main>
       <!-- habits start here -->
       <section class="habits-section">
@@ -136,7 +155,6 @@
           </p>
         </div>
       </div>
-
       <section class="bmi-calculator">
         <div class="container">
           <div class="bmi-calculator-wrapper display-flex">
